@@ -34,7 +34,7 @@ url=http://www.girlfriendvideos.com/categories.php
 ########################################################
 # Next
 ########################################################
-item_infos=<a href="(\d+.php)">Next Page</a>
+item_infos=<a href="([^"]+php)">Next Page</a>
 item_order=url
 item_skill=space|lock
 item_info_name=title
