@@ -1,7 +1,7 @@
 ﻿########################################################
 # YouJizz VideoPortal
 ########################################################
-start=http://www.youjizz.com/newest-clips/1.html
+start=http://www.youjizz.com/
 catcher=youjizz.com
 ########################################################
 # Videos
@@ -13,6 +13,23 @@ item_info_build= (%s)
 item_info_name=type
 item_info_build=video
 item_url_build=http://www.youjizz.com%s
+########################################################
+# Direct Links
+########################################################
+title=  Top Rated
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.youjizz.com/top-rated/1.html
+########################################################
+title=  Random Videos
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.youjizz.com/random.php
+########################################################
+title=  Newest Videos
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.youjizz.com/newest-clips/1.html
 ########################################################
 # Next
 ########################################################
